@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.1 2018/07/15 21:22:46 minskim Exp $
+$NetBSD: distinfo,v 1.2 2019/07/31 16:15:36 brook Exp $
 
-SHA1 (R/codetools_0.2-15.tar.gz) = a6a384b17adae4f8c92ddeeab4f1393a0ff732c1
-RMD160 (R/codetools_0.2-15.tar.gz) = 30e7c648579d6685ad340506ac2303b2bcb5cbf4
-SHA512 (R/codetools_0.2-15.tar.gz) = 79493badfd6fb32ecdff693b8e31aa3a87664eafd636b226220a2deb7c6ee6be47576cdf6a9b07867be9d547dff1d0959c4614728c34f26ec3f104123532622a
-Size (R/codetools_0.2-15.tar.gz) = 12930 bytes
+SHA1 (R/codetools_0.2-16.tar.gz) = e2ae50515912665c2b3fb35d39b758cdef4e6aff
+RMD160 (R/codetools_0.2-16.tar.gz) = 9a71041aef3f89affe7f34759564a5d25612c291
+SHA512 (R/codetools_0.2-16.tar.gz) = 19c2eb1281f4ff99556b9cf2e7bd06fed3a261af3e6d21c49f9bb8804550152bf9fc7a152d6836816a2ea801a766547a2650a0aa8e85b3139f224cbee651cb39
+Size (R/codetools_0.2-16.tar.gz) = 12996 bytes
